dynamically loading images in cards

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-                        <!-------ABOUT US AND LOGO-------------------------->
+<!------------------------------------------ABOUT US AND LOGO-------------------------->
     <div class="container">
         <div class="jumbotron">
             <div class="row">
@@ -67,7 +67,7 @@
             </div>     
         </div>
 
-                        <!--------- 4 LOGOS -------------------------------->
+                <!-------------------------- 4 LOGOS -------------------------------->
 
         <div class="row">
             <div class="logos col-md-6 col-lg-4 col-xl-3">
