--- a/src/html/user_dashboard.html
+++ b/src/html/user_dashboard.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>User Dashboard</title>
-        <script defer src="../lib/jquery-3.5.1.js"></script>
+        
         <script defer src="../js/user_dashboard.js"></script>
         <link rel="stylesheet" href="../css/user_dashboard.css">
     </head>
@@ -19,6 +19,7 @@
 
         </section>
         <footer></footer>
+        <script  src="../lib/jquery-3.5.1.js"></script>
     </body>
 </html>
 </html>
