--- a/src/html/result_page.html
+++ b/src/html/result_page.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <link rel="stylesheet" type="text/css" href="quiz_home.css" />
     <meta charset="utf-8" />
@@ -17,8 +17,8 @@
     <div class="main">
       <div class="quizContainer container-fluid well well-lg">
         <div id="quiz1" class="text-center">
-          <!--	<center><img class="img-responsive" height="180" width="180" src="http://res.cloudinary.com/dwjej2tbp/image/upload/v1523002021/KGCAS_SK_eyehy9.jpg"></center>-->
-          <h4
+          	<center><img class="img-responsive" height="180" width="180" src="http://res.cloudinary.com/dwjej2tbp/image/upload/v1523002021/KGCAS_SK_eyehy9.jpg"></center>-->
+          <!-- <h4
             style="color: #ff0000; position: absolute; left: 70%; top: 5%"
             align="center"
           ></h4>
@@ -31,4 +31,4 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
