Changed index, quiz_home and admin_add_questions

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                             100 countries.
                         </p>    
                 </div>
-                <div class="mainlogo logo col-md-6 col-lg-6">
+                <!-- <div class="mainlogo logo col-md-6 col-lg-6">
                     <iframe src="https://giphy.com/embed/xTiN0IuPQxRqzxodZm" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></a></p>
-                </div>   
+                </div>    -->
             </div>     
         </div>
 
