--- a/src/html/admin_profile.html
+++ b/src/html/admin_profile.html
@@ -1,70 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/admin_profile.css">
+    <script src="../js/admin_dashboard.js"></script>
+    <link rel="stylesheet" href="../css/admin_profile.css" />
+    <link rel="stylesheet" href="../css/index.css" />
     <title>Admin Profile</title>
-</head>
+  </head>
 
+  <body>
+    <nav class="navbar navbar-expand-md font-weight-bold">
+      <a href="./admin_dashboard.html"
+        ><img src="../images/main_lo.png" class="hlogo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarContent"
+        aria-controls="navbarContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="./admin_dashboard.html" class="nav-link">
+              <i class="fa fa-fw fa-user"></i> Dashboard</a
+            >
+          </li>
+          <li class="nav-item">
+            <button
+              href="user_register.html"
+              class="nav-link btn btn-white"
+              onclick="logout()"
+            >
+              <i class="fa fa-sign-out" aria-hidden="true"></i> Logout
+            </button>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+    <div class="profile-container">
+      <h2><span class="badge bg-primary">Admin Profile</span></h2>
 
+      <!-- admin name -->
 
-    <div class="profile-container ">
-        <h2> <span class="badge bg-primary">Admin Profile</span></h2>
+      <!-- for email-->
+      <div class="email">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Email address</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="admin-email"
+          placeholder="name@example.com"
+        />
+      </div>
+      <br />
 
-        <!-- admin name -->
+      <!-- Mention updation performed -->
+      <div class="message">
+        <label for="Message box" class="form-label"
+          >Mention the Updations performed in Quiz!</label
+        >
+        <textarea class="form-control" id="admin-message" rows="3"></textarea>
+      </div>
 
+      <!-- for contact number -->
+      <div class="contact">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Contact Number :</label
+        >
+        <input
+          type="number"
+          class="form-control"
+          id="admin-contact"
+          placeholder="xxxxxxxxxx"
+        />
+      </div>
+      <br />
 
+      <h3>Update Password :</h3>
+      <br />
 
+      <!-- for password update -->
 
-        <!-- for email-->
-        <div class="email">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="admin-email" placeholder="name@example.com">
-        </div><br>
+      <div class="current-pwd">
+        <label for="current password" class="form-label"
+          >Current Password</label
+        >
+        <input
+          type="password"
+          class="form-control"
+          id="admin-pwd"
+          placeholder="Password"
+        />
+      </div>
+      <br />
 
-        <!-- Mention updation performed -->
-        <div class="message">
-            <label for="Message box" class="form-label">Mention the Updations performed in Quiz!</label>
-            <textarea class="form-control" id="admin-message" rows="3"></textarea>
-        </div>
-
-        <!-- for contact number -->
-        <div class="contact">
-            <label for="exampleFormControlInput1" class="form-label">Contact Number :</label>
-            <input type="number" class="form-control" id="admin-contact" placeholder="xxxxxxxxxx">
-        </div><br>
-
-
-        <h3>
-            Update Password :
-        </h3><br>
-
-
-        <!-- for password update -->
-       
-        <div class="current-pwd">
-            <label for="current password" class="form-label">Current Password</label>
-            <input type="password" class="form-control" id="admin-pwd" placeholder="Password">
-        </div><br>
-
-        <div class="new-pwd">
-            <label for="new password" class="form-label">New Password</label>
-            <input type="password" class="form-control" id="admin-new-pwd" placeholder="Password"><br>
-            <a href="one.html" class="btn btn-success">Submit Password</a>
-
-        </div>
-
-
+      <div class="new-pwd">
+        <label for="new password" class="form-label">New Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="admin-new-pwd"
+          placeholder="Password"
+        /><br />
+        <a href="one.html" class="btn btn-success">Submit Password</a>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
