--- a/src/html/quiz_home.html
+++ b/src/html/quiz_home.html
@@ -15,29 +15,30 @@
   <body>
     <div class="wrapper">
       <div class="row">
-        <div class="col-sm-9">
+        <div id="quizback" class="col-sm-9">
           <div class="quizContainer container-fluid well well-lg">
             <div id="quiz1" class="text-center">
-              <!--	<center><img class="img-responsive" height="180" width="180" src="http://res.cloudinary.com/dwjej2tbp/image/upload/v1523002021/KGCAS_SK_eyehy9.jpg"></center>-->
               <h4>
                 <div class="quiz-timer">
                   <span id="iTimeShow"></span><br /><span id="timer"></span>
                 </div>
               </h4>
-              <h1>QUIZ</h1>
+              <h1 id="heading">QUIZ</h1>
+              <h1 id="score" hidden></h1>
             </div>
 
             <div class="question"></div>
             <ul class="choiceList"></ul>
-            <br/>
+            <br />
             <button class="preButton">Prev</button>
-            <button class="flag">Flag</button>
             <button class="nextButton">Next</button>
+            <button class="flag">Flag</button>
           </div>
         </div>
-        <div class="col-sm-3 btns"><div class="questionNav"></div></div>
+        <div class="col-sm-3 btn btns"><div class="questionNav"></div></div>
       </div>
-      <div><button id="submit" class="close">Submit</button></div>
+      <div><button id="submit" class="btn btn-success">Submit</button></div>
+      <button class="btn pushdata">Close</button>
     </div>
 
     <div class="main"></div>
