--- a/src/html/user_navbar.html
+++ b/src/html/user_navbar.html
@@ -1,23 +1,50 @@
-<html>
-    <head>
-        <script defer src="../lib/jquery-3.5.1.js"></script>
-        <script defer src="../lib/bootstrap-5.0.0-beta1-dist/js/bootstrap.js"></script>
-        <link rel="stylesheet" href="../lib/bootstrap-5.0.0-beta1-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="../css/user_navbar.css">
-    </head>
-    <body>
-        <nav class="nav_bar">
-            <ul class="nav flex-column">
-                <button class="nav-item btn btn-light" id="home">
-                  Home
-                </button>
-                <button class="nav-item btn btn-light" id="profile">
-                 Profile
-                </button>
-                <button class="nav-item btn btn-light" id="performance">
-                 Past Performance
-                </button>
-              </ul>
-        </nav>        
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script> 
+    <!-- CSS only -->
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/user_navbar.css">
+    <title>User Navbar</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-fill">
+      <div class="container-fluid">
+        <button class="navbar-toggler" 
+        type="button" 
+        data-bs-toggle="collapse" 
+        data-bs-target="#navbarTogglerDemo01" 
+        aria-controls="navbarTogglerDemo01" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav nav-justified">
+            <button class="nav-item btn btn-dark" id="home">
+              Home
+            </button>
+            <button class="nav-item btn btn-dark" id="profile">
+             Profile
+            </button>
+            <button class="nav-item btn btn-dark" id="performance">
+             Past Performance
+            </button>
+          </ul>
+          </div>
+      </div>
+    </nav>        
+</body>
 </html>
+
+    
