--- a/src/html/user_register.html
+++ b/src/html/user_register.html
@@ -4,22 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="../js/user_login_register.js"></script>
     <link rel="stylesheet" href="../css/user_login.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script></head>
+    <title>User Register Page</title>
+  </head>
 
 <body>
-
-    <h2>Register Here</h2>
-    <br>
-    <div class="login">
+    <nav class="navbar navbar-expand-md   font-weight-bold">
+        <a href="../../"><img src="../images/main_lo.png" class="hlogo" /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarContent"
+          aria-controls="navbarContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="admin_login.html" class="nav-link">
+                <i class="fa fa-fw fa-user"></i> Admin Login</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="user_login.html" class="nav-link"
+                ><i class="fa fa-fw fa-user"></i> User Login</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><i class="fa fa-fw fa-user-plus"></i> Register User</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <div class="register">
         <form id="register">
+            <h2><b>Register </b></h2>
             <center><label><b>Name</b></label></center>
             <input type="name" class="form-control" id="name" required placeholder="Name">
             <br>
@@ -28,18 +58,22 @@
             <input type="email" class="form-control" id="email" required placeholder="abc@gmail.com"
             pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
             <span class="text-muted" id="inval"></span>
+            <span></span>
             <br>
 
             <center><label><b>Password</b><br></label></center>
             <input type="password" class="form-control" required placeholder="Password" id="pass"
-            pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$">
+            pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$"
+            >
             <br>
 
             <center><label><b>Confirm Password</b></label></center>
-            <input type="password" class="form-control" id="cpass" required placeholder="Password"
-            pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$">
-            <span id="out"></span>
 
+            <input type="password" class="form-control" id="cpass" required placeholder="Password"
+            pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$"
+            >
+
+            <span id="out"></span>
             <br>
 
             <center><label><b>Phone Number</b></label></center>
@@ -47,6 +81,7 @@
             <br>
 
             <button type="submit" id="but" class="btn btn-primary btn-block">Register</button>
+            <br>
         </form>
 
 </body>
