--- a/src/html/quiz_home.html
+++ b/src/html/quiz_home.html
@@ -28,6 +28,9 @@
             </div>
 
             <div class="question"></div>
+            <div class="qimg">
+              <img class="image rounded" src="" alt="Image not found">
+            </div>
             <ul class="choiceList"></ul>
             <br />
             <button class="preButton">Prev</button>
