--- a/src/html/user_navbar.html
+++ b/src/html/user_navbar.html
@@ -38,7 +38,7 @@
              Profile
             </button>
             <button class="nav-item btn btn-dark" id="performance">
-             Past Performance
+             Performance
             </button>
           </ul>
           </div>
