changes in navbar

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -24,7 +24,7 @@
 
         <img src="../images/header_logo.png" class="justify-content-start logo">
         <span class="display-6 text-center dashboard">Dashboard</span>
-        <button class="logout_button btn-dark logout justify-content-end" onclick="logout()"  type="submit"><i class="fas fa-sign-out-alt"></i></button>
+        <button class="logout_button btn-dark logout justify-content-end"  type="submit"><i class="fas fa-sign-out-alt"></i></button>
 
 
     </header>
