--- a/src/html/user_navbar.html
+++ b/src/html/user_navbar.html
@@ -18,7 +18,7 @@
     <title>User Navbar</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-fill">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-fill nav-justified">
       <div class="container-fluid">
         <button class="navbar-toggler" 
         type="button" 
@@ -31,13 +31,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav nav-justified">
-            <button class="nav-item btn btn-dark" id="home">
+            <button class="fas fa-home nav-item btn btn-dark nav-justified" id="home">
               Home
             </button>
-            <button class="nav-item btn btn-dark" id="profile">
+
+            <button class=" fas fa-users nav-item btn btn-dark nav-justified" id="profile">
              Profile
             </button>
-            <button class="nav-item btn btn-dark" id="performance">
+            
+            <button class="fas fa-chart-bar nav-item btn btn-dark nav-justified" id="performance">
              Past Performance
             </button>
           </ul>
