--- a/src/html/user_profile.html
+++ b/src/html/user_profile.html
@@ -31,14 +31,12 @@
     <center>
       <!---------------------------------------------------user name------------------------------------------------------ -->
       <div class="profile-container">
-        <h2><span class="badge bg-primary">view your profile here</span></h2>
+        
         <!-- for name-->
 
-        <div class="jumbotron">
+        <div class=" profile jumbotron">
           <div class="name">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Name :</label
-            >
+            <label for="exampleFormControlInput1" class="form-label">Name :</label>
             <input type="text" id="user_name" disabled />
             <!-- <input type="email" class="form-control " id="admin-email" placeholder="name@example.com"> -->
           </div>
@@ -46,48 +44,30 @@
 
           <!-- for name-->
           <div class="email">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Email address :</label
-            >
+            <label for="exampleFormControlInput1" class="form-label">Email address :</label>
             <input type="text" id="user_email" disabled />
           </div>
-          <br />
+          <br/>
 
           <!-- for contact number -->
           <div class="contact">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Contact Number :</label
-            >
+            <label for="exampleFormControlInput1" class="form-label">Contact Number :</label>
             <input type="text" id="user_contact" disabled />
           </div>
-          <br />
+          <br/>
           <!-- current password -->
           <div class="current-pwd">
-            <label for="current password" class="form-label"
-              >Current Password :</label
-            >
-            <input
-              type="password"
-              class="form-control"
-              id="user_pwd"
-              placeholder="Password"
-            />
+            <label for="current password" class="form-label">Current Password :</label>
+            <input type="password" class="form-control" id="user_pwd" placeholder="Password"/>
           </div>
           <br />
           <!-- new password -->
           <div class="new-pwd">
             <label for="new password" class="form-label">New Password :</label>
-            <input
-              type="password"
-              class="form-control"
-              id="user-new-pwd"
-              placeholder="Password"
-            /><br />
+            <input type="password" class="form-control" id="user-new-pwd" placeholder="Password"/>
+            <br/>
           </div>
-          <button
-            id="updatePassword"
-            class="btn btn-danger cngpass updatePassword"
-          >
+          <button id="updatePassword" class="btn btn-danger cngpass updatePassword">
             Change Password
           </button>
         </div>
